manifests/mosquitto/sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  ports:
    - port: 1884
      name: websockets
  clusterIP: None
  selector:
    app: mosquitto

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mosquitto
spec:
  serviceName: "mosquitto"
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      volumes:
        - name: config
          configMap:
            name: mosquitto-config
            items:
              - key: mosquitto.conf
                path: mosquitto.conf
        - name: passwords
          secret:
            secretName: passwords
        - name: mosquitto-auth-go
          emptyDir:
            sizeLimit: 500Mi
      containers:
        - name: mosquitto
          image: docker.io/library/eclipse-mosquitto:2.0-openssl
          imagePullPolicy: Always
          ports:
            - containerPort: 1884
              name: websockets
          volumeMounts:
            - name: config
              mountPath: /mosquitto/config/
            - name: passwords
              mountPath: /mosquitto/passwords/
            - name: mosquitto-auth-go
              mountPath: /mosquitto/plugins/
