manifests/mosquitto/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto
  annotations:
    cert-manager.io/cluster-issuer: le-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mqtt.lab.weltraumpflege.org
      secretName: ingress-cert
  rules:
    - host: mqtt.lab.weltraumpflege.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosquitto
                port:
                  number: 1884
